--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
         <th>Alphonsine</th>
         <th>20</th>
     </tr>
+<tr>
+        <th>Emma</th>
+        <th>Bovary</th>
+        <th>20</th>
+    </tr>
 </table>
 </body>
